add different k of kmean

--- a/labwork2/ahc.ipynb
+++ b/labwork2/ahc.ipynb
@@ -132,15 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = linkage(features_data, \"single\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "s = linkage(features_data, \"single\")\n",
     "c = linkage(features_data, \"complete\")"
    ]
   },
