--- a/labwork1/iris_analysis.ipynb
+++ b/labwork1/iris_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -47,65 +47,65 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>6.8</td>\n",
+       "      <th>70</th>\n",
+       "      <td>6.1</td>\n",
        "      <td>2.8</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>1.4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.3</td>\n",
        "      <td>Iris-versicolor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
+       "      <th>51</th>\n",
+       "      <td>6.9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
        "      <td>5.1</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.3</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.6</td>\n",
+       "      <th>80</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.2</td>\n",
        "      <td>0.2</td>\n",
        "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>7.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>Iris-virginica</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     sepal_length  sepal_width  petal_length  petal_width            class\n",
-       "75            6.8          2.8           4.8          1.4  Iris-versicolor\n",
-       "43            5.1          3.8           1.9          0.4      Iris-setosa\n",
-       "28            4.7          3.2           1.6          0.2      Iris-setosa\n",
-       "100           5.8          2.7           5.1          1.9   Iris-virginica\n",
-       "134           7.7          3.0           6.1          2.3   Iris-virginica"
+       "    sepal_length  sepal_width  petal_length  petal_width            class\n",
+       "70           6.1          2.8           4.0          1.3  Iris-versicolor\n",
+       "51           6.9          3.1           4.9          1.5  Iris-versicolor\n",
+       "16           5.1          3.5           1.4          0.3      Iris-setosa\n",
+       "80           5.5          2.4           3.7          1.0  Iris-versicolor\n",
+       "13           5.8          4.0           1.2          0.2      Iris-setosa"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"./iris/iris.data\")\n",
+    "data = pd.read_csv(\"../datasets/iris_dataset/iris.data\")\n",
     "feature_column = ['sepal_length', 'sepal_width', 'petal_length', 'petal_width']\n",
     "data.columns = [*feature_column, \"class\"]\n",
     "sample =data.sample(5)\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,16 +228,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x239803c5010>"
+       "<matplotlib.legend.Legend at 0x2721d903650>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "[149 rows x 4 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "petal_width       0.515347    -0.115749      1.289124     0.579566"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "0.9773879874667986"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "0.9947602632265022"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
